--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "phone-diary",
+  "name": "info-diary",
   "version": "1.0.0",
-  "description": "",
+  "description": "information storage system",
   "main": "index.js",
+  "preferGlobal": true,
+  "bin": "./commands.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,10 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^2.19.0",
+    "debug-log": "^2.0.0",
     "inquirer": "^6.2.2",
     "mongoose": "^5.4.16"
   },
-  "devDependencies": {
-    "nodemon": "^1.18.10"
-  }
+  "devDependencies": {}
 }
